--- a/index.html
+++ b/index.html
@@ -106,7 +106,16 @@ img {
 																	<img src="images/video.png " />
 										</a>
 		<a href="video_3206.html" rel="external" data-ajax="flase"  >
-				<label>Videos</label>
+				<label>page_youtube</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
+			<a class="item link" href="video_3207.html" rel="external" data-ajax="flase"  >
+																	<img src="images/video.png " />
+										</a>
+		<a href="video_3207.html" rel="external" data-ajax="flase"  >
+				<label>page_mp4 videos</label>
 		</a>
 	</div>
 
