--- a/staticpage_3205_1860.html
+++ b/staticpage_3205_1860.html
@@ -68,9 +68,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>page one</h1>
+    <h1>page two</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -80,28 +80,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3205_1858.html">
-                                	<img src="http://app-gorilla.com/members/wizard/mediafiles/neha_12_38/thumb/neha_12_139453383433242324_256x256.jpg" class="ui-li-thumb">
-                                <h2>
-                staic pages added                </h2>
-                <p>test ebw sghdasgjdgajs hdgasj dhjas dhjhas djsfg ahsgdfj agsjdf ajhsdgf jag</p>
-                
-            </a></li>
-	
-		 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3205_1860.html">
-                                	<img src="http://app-gorilla.com/members/wizard/mediafiles/neha_12_38/thumb/neha_12_1394714280_256x256.jpg" class="ui-li-thumb">
-                                <h2>
-                page two                </h2>
-                <p>test multp ajdsg g<img src="http://i.imgur.com/IN9Bs5E.jpg" width="240">hda</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  test multp ajdsg g<img src="http://i.imgur.com/IN9Bs5E.jpg" width="240">hda j ASJKDG asgdsagjdG DJFG ASHFGHAS DGFHSA DHASDH FGASDJG SJFADSH GFAHSD HGSDFHGDF<br>
+
+  </div>
 
   
 
