--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ img {
 																	<img src="images/staticpage.png " />
 										</a>
 		<a href="staticpage_3205.html" rel="external" data-ajax="flase"  >
-				<label>StaticPage</label>
+				<label>page one</label>
 		</a>
 	</div>
 
