--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@ img {
 		</a>
 	</div>
 
+			<div class="app_feature_list">
+			<a class="item link" href="staticpage_3213.html" rel="external" data-ajax="flase"  >
+																	<img src="images/staticpage.png " />
+										</a>
+		<a href="staticpage_3213.html" rel="external" data-ajax="flase"  >
+				<label>single pagesss</label>
+		</a>
+	</div>
+
 	
 </div>
 
