--- a/more.html
+++ b/more.html
@@ -121,6 +121,15 @@
 		</a>
 	</div>
 
+			<div class="app_feature_list">
+			<a class="item link" href="staticpage_3213.html" rel="external" data-ajax="flase"  >
+																	<img src="images/staticpage.png " />
+										</a>
+		<a href="staticpage_3213.html" rel="external" data-ajax="flase"  >
+				<label>single pagesss</label>
+		</a>
+	</div>
+
 	
 </div>
 
@@ -133,7 +142,7 @@
 
             <style> .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 40px !important; width: 60px!important;}		.nav-glyphish-example .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }#tab1 .ui-icon { background:  url("icons_tech_1579.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab2 .ui-icon { background:  url("icons_communication_1092.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab3 .ui-icon { background:  url("64Px_-_504-11.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab4 .ui-icon { background:  url("64Px_-_504-210.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab5 .ui-icon { background:  url("more.png") 50% 50% no-repeat; background-size: 30px 30px; }</style>
 
-            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="staticpage_3205.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_3205.html" class="" onclick="window.open('staticpage_3205.html','_self', 'location=yes')">page one</a></li><li><a href="video_3206.html" id="tab2" data-icon="custom" rel="external"  data-gourl="video_3206.html" class="" onclick="window.open('video_3206.html','_self', 'location=yes')">page_youtube</a></li><li><a href="video_3207.html" id="tab2" data-icon="custom" rel="external"  data-gourl="video_3207.html" class="" onclick="window.open('video_3207.html','_self', 'location=yes')">page_mp4 videos</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
+            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="staticpage_3205.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_3205.html" class="" onclick="window.open('staticpage_3205.html','_self', 'location=yes')">page one</a></li><li><a href="video_3206.html" id="tab2" data-icon="custom" rel="external"  data-gourl="video_3206.html" class="" onclick="window.open('video_3206.html','_self', 'location=yes')">page_youtube</a></li><li><a href="video_3207.html" id="tab2" data-icon="custom" rel="external"  data-gourl="video_3207.html" class="" onclick="window.open('video_3207.html','_self', 'location=yes')">page_mp4 videos</a></li><li><a href="staticpage_3213.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_3213.html" class="" onclick="window.open('staticpage_3213.html','_self', 'location=yes')">single pagesss</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
 
         </div>	
 
